fix challenge box icon spacing

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -480,6 +480,8 @@
         .name {
           font-size: 20px;
           font-weight: 500;
+          width: 189px;
+          line-height: 1;
         }
         .icon {
           float: right;
@@ -492,6 +494,7 @@
           font-size: 17px;
           font-weight: 500;
           color: #4a4a4a;
+          margin-top: 3px;
         }
       }
      }
